# rules-rag

./: .gitignore  CLAUDE.md  Cargo.toml  pdf-process.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/generate/: Cargo.toml
crates/generate/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  manifest.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: lib.rs
crates/retrieve/: Cargo.toml
crates/retrieve/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
data/eval/: golden.jsonl
data/pdfs/: manifest.toml
docs/: backlog.md  future-work.md  output-2cb7ba.txt  output-fullcontext-a90f75.txt  plan.md
scripts/: README.md  add_eval.py  extract_all.sh  pdf2txt.sh  pdf_columns.py  update_manifest.py
