[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
embed = { path = "../embed" }
generate = { path = "../generate" }
ingest = { path = "../ingest" }
rag-core = { path = "../rag-core" }
store = { path = "../store" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
