[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
embed = { path = "../embed" }
eval = { path = "../eval" }
generate = { path = "../generate" }
ingest = { path = "../ingest" }
pipeline = { path = "../pipeline" }
rag-core = { path = "../rag-core" }
retrieve = { path = "../retrieve" }
store = { path = "../store" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
