[package]
name = "eval"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.32"
pipeline = { path = "../pipeline" }
rag-core = { path = "../rag-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tiktoken-rs = "0.11.0"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
