[package]
name = "store"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-array = "57.3.0"
arrow-schema = { version = "57.3.0", features = ["serde"] }
rag-core = { path = "../rag-core" }
futures = "0.3.32"
lancedb = "0.27.2"
serde_arrow = { version = "0.14.0", features = ["arrow-57"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
